modules/apps/orthanc/templates/configmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthanc
  namespace: orthanc
spec:
  selector:
    app: orthanc
  ports:
    - name: http
      port: 8042
      targetPort: 8042
---
apiVersion: v1
kind: Service
metadata:
  name: ohif
  namespace: orthanc
spec:
  selector:
    app: ohif
  ports:
    - name: http
      port: 80
      targetPort: 80
