modules/apps/orthanc/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc
  namespace: orthanc
  annotations:
    nginx.ingress.kubernetes.io/cors-enable: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  ingressClassName: nginx
  rules:
    - host: orthanc.nc
      http:
        paths:
          - path: /dicom-web
            pathType: Prefix
            backend:
              service:
                name: orthanc
                port:
                  number: 8042
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ohif
                port:
                  number: 80
